# texel

./: .gitignore  CMakeLists.txt  ChangeLog.txt  build.sh  nndata.tbin.compr  readme.txt
app/: CMakeLists.txt
app/bookgui/: CMakeLists.txt  bookbuildcontrol.cpp  bookbuildcontrol.hpp  bookgui.cpp  bookgui.hpp  bookgui_glade.xml  chessboard.cpp  chessboard.hpp
app/runcmd/: CMakeLists.txt  runcmd.cpp
app/syncengine/: CMakeLists.txt  syncengine.cpp
app/texel/: CMakeLists.txt  enginecontrol.cpp  enginecontrol.hpp  searchparams.hpp  texel.cpp  tuigame.cpp  uciprotocol.cpp
app/texelutil/: CMakeLists.txt  chesstool.cpp  chesstool.hpp  matchbookcreator.cpp  matchbookcreator.hpp  matchrunner.cpp  matchrunner.hpp  posgen.cpp  posgen.hpp  spsa.cpp  spsa.hpp  texelutil.cpp  validate.py
app/torchtrain/: CMakeLists.txt  torchtrain.cpp
app/torchutil/: CMakeLists.txt  dataset.cpp  dataset.hpp  featureperm.cpp  featureperm.hpp  randperm.cpp  randperm.hpp  torchutil.cpp
app/uciadapter/: CMakeLists.txt  ctgbook.cpp  ctgbook.hpp  uciadapter.cpp  uciadapter.hpp
bookgui/: .cproject  .project
bookgui/.externalToolBuilders/: glib_resources.launch
bookgui/src/: bookbuildcontrol.cpp  bookbuildcontrol.hpp  bookgui.cpp  bookgui.hpp  bookgui_glade.xml  chessboard.cpp  chessboard.hpp  gresource.xml  resource.cpp
cmake/checks/: atomic.cpp
cmake/toolchains/: android32.cmake  android64.cmake  clang.cmake  lnx32.cmake  win32.cmake  win64.cmake  win64_clang.cmake
doc/: Makefile  evalfens.sh  gensvg.py  proofgame.md  tbprobe.md  training.md
lib/: CMakeLists.txt
lib/texellib/: CMakeLists.txt  binfile.hpp  bitBoard.cpp  bitBoard.hpp  book.cpp  book.hpp  chessError.hpp  chessParseError.hpp  cluster.cpp  cluster.hpp  computerPlayer.cpp  computerPlayer.hpp  constants.hpp  endGameEval.cpp  endGameEval.hpp  evaluate.cpp  evaluate.hpp  game.cpp  game.hpp  history.cpp  history.hpp  move.hpp  moveGen.cpp  moveGen.hpp  numa.cpp  parallel.cpp  parallel.hpp  parameters.cpp  parameters.hpp  player.hpp  position.cpp  position.hpp  search.cpp  search.hpp  searchUtil.hpp  square.hpp  tbprobe.cpp  textio.cpp  textio.hpp  threadorder.cpp  (+6 more)
lib/texellib/book/: book.cpp  book.hpp  polyglot.cpp
lib/texellib/debug/: searchTreeSampler.cpp  searchTreeSampler.hpp  treeLogger.cpp
lib/texellib/hw/: alignedAlloc.hpp  cluster.cpp  clustertt.cpp  largePageAlloc.cpp  numa.cpp  parallel.cpp  parallel.hpp
lib/texellib/nn/: incbin.h  nndata.cpp  nndata.cpp.in  nneval.cpp  nneval.hpp  nntypes.cpp  nntypes.hpp  vectorop.hpp
lib/texellib/syzygy/: rtb-core-impl.hpp  rtb-probe.cpp
lib/texellib/tb/: tbgen.cpp  tbgen.hpp  tbprobe.cpp  tbprobe.hpp
lib/texellib/tb/gtb/: gtb-probe.c
lib/texellib/tb/syzygy/: rtb-probe.cpp  rtb-probe.hpp
lib/texellib/util/: random.cpp  random.hpp  timeUtil.hpp  util.cpp  util.hpp
lib/texelutillib/: CMakeLists.txt  assignment.hpp  bitSet.hpp  bookbuild.cpp  bookbuild.hpp  cspsolver.cpp  cspsolver.hpp  dblvec.hpp  extproofkernel.cpp  extproofkernel.hpp  gametree.cpp  gametree.hpp  gametreeutil.hpp  gsprt.cpp  gsprt.hpp  nnutil.cpp  nnutil.hpp  pkseq.cpp  pkseq.hpp  posutil.cpp  posutil.hpp  proofgame.cpp  proofgame.hpp  proofgamefilter.cpp  proofgamefilter.hpp  proofkernel.cpp  proofkernel.hpp  revmovegen.cpp  revmovegen.hpp  stloutput.hpp  tbpath.cpp  tbpath.hpp  threadpool.hpp
lib/texelutillib/pg/: assignment.hpp  cspsolver.hpp  extproofkernel.cpp  extproofkernel.hpp  pkseq.cpp  pkseq.hpp  proofgame.cpp  proofgame.hpp  proofgamefilter.cpp  proofgamefilter.hpp  proofkernel.cpp  proofkernel.hpp
test/: CMakeLists.txt
test/cute/: CMakeLists.txt
test/texellib/: CMakeLists.txt  bitBoardTest.cpp  bookTest.cpp  computerPlayerTest.cpp  computerPlayerTest.hpp  evaluateTest.cpp  evaluateTest.hpp  gameTest.cpp  gameTest.hpp  historyTest.cpp  killerTableTest.cpp  moveGenTest.cpp  moveTest.cpp  nnTest.cpp  nnTest.hpp  parallelTest.cpp  parallelTest.hpp  pieceTest.cpp  polyglotTest.cpp  positionTest.cpp  positionTest.hpp  searchTest.cpp  searchTest.hpp  suiteBase.hpp  tbTest.cpp  tbTest.hpp  tbgenTest.cpp  tbgenTest.hpp  texelTest.cpp  textioTest.cpp  transpositionTableTest.cpp  treeLoggerTest.cpp  treeLoggerTest.hpp  utilTest.cpp
test/texelutil/: CMakeLists.txt  bookBuildTest.cpp  bookBuildTest.hpp  cspsolverTest.cpp  cspsolverTest.hpp  gameTreeTest.cpp  gameTreeTest.hpp  nnutilTest.cpp  nnutilTest.hpp  proofgameTest.cpp  proofgameTest.hpp  proofkernelTest.cpp  proofkernelTest.hpp  revmovegenTest.cpp  revmovegenTest.hpp  texelutiltest.cpp  utilSuiteBase.hpp
test/torchutil/: CMakeLists.txt  datasetTest.cpp  datasetTest.hpp  randpermTest.cpp  randpermTest.hpp  torchutiltest.cpp
texel/: .cproject  .project
texel/src/: enginecontrol.cpp  enginecontrol.hpp  searchparams.hpp  texel.cpp  tuigame.cpp  tuigame.hpp  uciprotocol.cpp  uciprotocol.hpp
texellib/: .cproject  .project
texellib/src/: alignedAlloc.hpp  bitBoard.cpp  bitBoard.hpp  book.cpp  book.hpp  chessParseError.hpp  cluster.cpp  cluster.hpp  clustertt.cpp  clustertt.hpp  computerPlayer.cpp  computerPlayer.hpp  constants.hpp  endGameEval.cpp  endGameEval.hpp  evaluate.cpp  evaluate.hpp  game.cpp  game.hpp  history.cpp  history.hpp  humanPlayer.cpp  humanPlayer.hpp  killerTable.cpp  killerTable.hpp  kpkTable.cpp  krkpTable.cpp  largePageAlloc.cpp  logger.hpp  material.hpp  move.cpp  move.hpp  moveGen.cpp  moveGen.hpp  numa.cpp  numa.hpp  parallel.cpp  parallel.hpp  parameters.cpp  parameters.hpp  (+29 more)
texellibtest/: .cproject  .project
texellibtest/src/: bitBoardTest.cpp  bitBoardTest.hpp  bookTest.cpp  bookTest.hpp  computerPlayerTest.cpp  computerPlayerTest.hpp  evaluateTest.cpp  evaluateTest.hpp  gameTest.cpp  gameTest.hpp  historyTest.cpp  historyTest.hpp  killerTableTest.cpp  killerTableTest.hpp  moveGenTest.cpp  moveGenTest.hpp  moveTest.cpp  moveTest.hpp  parallelTest.cpp  parallelTest.hpp  pieceTest.cpp  pieceTest.hpp  polyglotTest.cpp  polyglotTest.hpp  positionTest.cpp  positionTest.hpp  searchTest.cpp  tbTest.cpp  (+12 more)
texelutil/: .cproject  .project
texelutillib/: .cproject  .project
uciadapter/: .cproject  .project
(+53 files in other folders)
